# gitsvg

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/pre_commit/: action.yml
.github/actions/unit_test/: action.yml
.github/actions/validate_version_trigger/: action.yml
.github/workflows/: _unit_tests.yml  codeql.yml  dependabot_automerge.yml  fuzz.yml  pull_request.yml  pull_request_to_main.yml  push_to_branch.yml  push_to_main.yml  release_tag.yml  scorecard.yml
docs/: api.md  architecture.md  cli.md  examples.md  format.md  gen_example_assets.py  index.md  integrations.md
examples/: 01_linear.gitsvg.jsonl  02_branch_merge.gitsvg.jsonl  03_multi_branch.gitsvg.jsonl  04_highlight.gitsvg.jsonl  05_remove_rebuild.gitsvg.jsonl  06_import_squash.gitsvg.jsonl  07_pull_request.gitsvg.jsonl  08_themed.gitsvg.jsonl  09_horizontal.gitsvg.jsonl  10_named_themes_base.gitsvg.jsonl  11_unique_rows.gitsvg.jsonl  12_auto_lane_change.gitsvg.jsonl  13_gui_table.gitsvg.jsonl
fuzz/: fuzz_parse.py
gitsvg/: __init__.py  _pipeline.py  _render_text.py  _theme.py  _visual_constants.py  imports.py
gitsvg/_cli/: _cli.py  _errors.py  _schema.py
gitsvg/_errors/: __init__.py  _catalog.py  _codes.py  _report.py  _validation_error.py
gitsvg/_errors/catalog/: __init__.py
gitsvg/_file_format/: __init__.py  _schema.py
gitsvg/_file_format/ops/: __init__.py
gitsvg/_format/: __init__.py  _schema.py
gitsvg/_format/ops/: __init__.py  _branch.py  _canvas.py  (+6 more)
gitsvg/_shared/: __init__.py  color.py  numeric.py
gitsvg/_value_types/: __init__.py  _box_anchor.py  _commit_label_layout.py
gitsvg/cli/: __init__.py  _bulk.py  _cli.py  _errors.py  _introspect.py  _layout.py  _pipeline.py  _render.py  _schema.py  _state.py  _theme.py  _validate.py
gitsvg/errors/: __init__.py  _catalog.py  _codes.py  _report.py  _validation_error.py
gitsvg/file_format/: __init__.py  _label_side.py  _schema.py
gitsvg/imports/: __init__.py  _resolver.py
gitsvg/layout/: __init__.py  _engine.py  _layout.py  _layout_arc_kind.py  _layout_settings.py  _metrics.py  _occupancy.py  _serialisation.py  _serialization.py
gitsvg/parse/: __init__.py  _parsed_op.py  _parser.py
gitsvg/render/: __init__.py  _anchor_resolution.py  _canvas.py  _colors.py  _constants.py  _geometry.py  _glyph_metrics.py  _label_widths.py  _metrics.py  _minify.py  _renderer.py  _renderer_settings.py  _theme.py
gitsvg/state/: __init__.py  _auto_hash.py  _engine.py  _eof.py  _serialisation.py  _serialization.py  _state.py
gitsvg/theme/: __init__.py  _apply.py  _box_anchor.py  _branch_line_style.py  _builder.py  _color.py  _commit_row_mode.py  _default_theme.py  _merge_commit_style.py  _named_themes.py  _orientation.py  _resolve.py  _theme.py
gitsvg/validate/: __init__.py  _cross_reference.py  _resolved_config.py  _user_overrides.py
scripts/: build_glyph_widths.py  build_themed_preview.py  ci_compute_metrics.py  measure_examples.py  measure_minify.py  release.py  render_local.py  validate_local.py
scripts/font_sources/: README.md
tests/: _jsonl.py  conftest.py  test_imports.py  test_render_text.py
tests/_cli/: test_cli.py  test_errors.py  test_schema.py
tests/_errors/: conftest.py  test_catalog.py  test_codes.py  test_report.py  test_validation_error.py
tests/_file_format/: test_schema.py
tests/_format/: test_schema.py
tests/_shared/: test_color.py
tests/architecture/: test_axis_classification.py  test_connector_style_registry.py  test_lane_change_style_registry.py  test_merge_dot_style_registry.py  test_orientation_blind.py  test_pipeline_split.py  test_shared_is_leaf.py  test_z_order.py
tests/cli/: test_bulk.py  test_cli.py  test_errors.py  test_layout.py  test_pipeline.py  test_render.py  test_schema.py  test_state.py  test_theme.py  test_validate.py
tests/errors/: test_catalog.py  test_catalog_examples.py  test_codes.py  test_report.py  test_validation_error.py
tests/examples/: test_examples_layout.py  test_examples_render.py  test_examples_state.py
tests/file_format/: test_schema.py
tests/imports/: test_resolver.py
tests/integration/: test_corpus.py  test_pull_request_lifecycle.py  test_theme.py
tests/layout/: test_auto_lane_change.py  test_branch_tip.py  test_canvas_overrides.py  test_commit_row_mode.py  test_engine.py  test_grid_overrides.py  test_merge_flag.py  test_occupancy.py  test_pull_request_layout.py  test_pull_request_target_line.py  test_serialisation.py  test_serialization.py
tests/parse/: test_parser.py
tests/render/: test_anchor_resolution.py  test_arcs.py  test_background.py  test_branch_line.py  test_branch_lookups.py  test_canvas.py  test_canvas_auto_fit.py  test_colors.py  test_commit_row_band.py  test_commit_table.py  test_connector_styles.py  test_geometry.py  test_glyph_metrics.py  test_label_angles.py  test_label_widths.py  test_labels.py  test_merge_dot_styles.py  test_minify.py  test_orientation.py  test_pull_request_primitives.py  test_renderer.py  test_table_columns.py  test_table_text.py  test_theme.py
tests/state/: _helpers.py  test_apply_branch.py  test_apply_commit.py  test_apply_merge.py  test_apply_remove_and_highlight.py  test_apply_theme.py  test_auto_hash.py  test_auto_lane_change_conflict.py  test_engine.py  test_eof.py  test_merge_lane_clearance_conflict.py  test_pull_request_apply.py  test_remove_pull_requests.py  test_serialisation.py  test_serialization.py  test_state.py  test_suggestions.py  test_table_mode_conflict.py
tests/theme/: test_apply.py  test_auto_lane_change.py  test_branch_line_style.py  test_color.py  test_commit_label_layout.py  test_commit_row_band_color.py  test_commit_row_mode.py  test_float_dimensions.py  test_merge_commit_style.py  test_merge_lane_clearance.py  test_orientation.py  test_pull_request_extend_target_line.py  test_table_cell_padding.py  test_table_widths.py  test_theme.py
tests/validate/: _helpers.py  test_cross_reference.py  test_resolved_config.py  test_user_overrides.py
(+244 files in other folders)
