[project]
name = "gitsvg"
version = "0.1.3"
description = "CLI that renders git tree visualizations as SVG from JSONL input."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Bert Pluymers", email = "bert.pluymers@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["git", "svg", "visualization", "diagram", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.2.0",
    "drawsvg>=2.4.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.14.0",
    "pre-commit>=4.0",
]

[project.scripts]
gitsvg = "gitsvg.cli._cli:cli"

[project.urls]
Source = "https://github.com/bertpl/gitsvg"
Changelog = "https://github.com/bertpl/gitsvg/blob/main/CHANGELOG.md"
Issues = "https://github.com/bertpl/gitsvg/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["gitsvg"]

[tool.hatch.build.targets.wheel]
packages = ["gitsvg"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["gitsvg"]

[tool.coverage.report]
precision = 2
exclude_also = [
    "@abstractmethod",
    "@abc.abstractmethod",
]
