[project]
name = "gitsvg"
version = "0.3.2"
description = "CLI that renders git tree visualizations as SVG from JSONL input."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Bert Pluymers" }
]
requires-python = ">=3.11"
keywords = ["git", "svg", "visualization", "diagram", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.2.0,!=8.3.0,!=8.3.1",
    "drawsvg>=2.4.0",
    # pydantic-core ships no Python 3.14 wheel before pydantic 2.12.0, so the
    # 2.10.0 floor is unbuildable there; raise the floor on 3.14 only.
    "pydantic>=2.10.0; python_version < '3.14'",
    "pydantic>=2.12.0; python_version >= '3.14'",
]

[dependency-groups]
dev = [
    # Test harness pinned exactly so every matrix combo (highest + lowest-direct)
    # runs an identical pytest — node-ids are then deterministic across combos,
    # which the cumulative test-count union relies on. pytest is dev-only, so
    # this is orthogonal to the runtime dependency-floor matrix.
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "coverage==7.13.5",  # CI drives `coverage` directly (combine across the matrix)
    "ruff>=0.14.0",
    "ty==0.0.46",  # preview type checker — pin exactly; its ruleset is still evolving
    "pre-commit>=4.0",
    "fonttools>=4.55.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
gitsvg = "gitsvg.cli._cli:cli"

[project.urls]
Homepage = "https://github.com/bertpl/gitsvg"
Documentation = "https://gitsvg.readthedocs.io/"
Source = "https://github.com/bertpl/gitsvg"
Changelog = "https://github.com/bertpl/gitsvg/blob/main/CHANGELOG.md"
Issues = "https://github.com/bertpl/gitsvg/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["gitsvg"]

[tool.hatch.build.targets.wheel]
packages = ["gitsvg"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",       # pyflakes
    "E", "W",  # pycodestyle (incl. E501 line-too-long)
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "PIE",     # flake8-pie
    "SIM",     # flake8-simplify
    "RET",     # flake8-return
    "N",       # pep8-naming
    "PTH",     # flake8-use-pathlib
    "PT",      # flake8-pytest-style
    "TC",      # flake8-type-checking
    "ANN",     # flake8-annotations
    "D",       # pydocstyle (Google convention; D401 enforced)
    "RUF",     # ruff-native
]
ignore = [
    "RUF001", "RUF002", "RUF003",  # intentional typography (→, ×, en-dash), not "ambiguous"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# Keep pydantic field types importable at runtime (pydantic evaluates
# annotations to build validators); don't move them under TYPE_CHECKING.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]    # AAA tests: no docstrings, lighter typing
"__init__.py" = ["F401"]     # re-export modules: naked imports, no `as` alias

[tool.ty.src]
include = ["gitsvg"]

[tool.codespell]
# Skip generated / non-prose files: the lockfile, rendered SVGs, generated
# glyph-width LUTs, and the example layout/state snapshots.
skip = "uv.lock,*.svg,gitsvg/render/_glyph_widths/*,tests/examples/_layout_snapshots/*,tests/examples/_state_snapshots/*"
# Intentional hyphenated spellings used consistently across the prose + code.
ignore-words-list = "pre-empt,re-declare,re-declared,re-declares"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["gitsvg"]
relative_files = true  # so per-OS matrix data files combine without a [paths] map
parallel = true        # unique data file per run, for cross-job `coverage combine`

[tool.coverage.report]
precision = 2
fail_under = 90        # cumulative gate, enforced on the combined matrix data
exclude_also = [
    "@abstractmethod",
    "@abc.abstractmethod",
]
